--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,12 @@
-<p>home works!</p>
+<app-navbar></app-navbar>
+
+<mat-list *ngFor="let post of posts">
+    <mat-card>
+        <mat-card-header>
+            <mat-card-title>{{ post.title }}</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+            {{ post.content }}
+        </mat-card-content>
+    </mat-card>
+</mat-list>
