--- a/src/app/perfil/perfil.component.html
+++ b/src/app/perfil/perfil.component.html
@@ -1,1 +1,16 @@
-<p>perfil works!</p>
+<app-navbar></app-navbar>
+
+<mat-list *ngFor="let post of posts">
+    <mat-card>
+        <mat-card-header>
+            <mat-card-title>{{ post.title }}</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+            {{ post.content }}
+        </mat-card-content>
+        <mat-card-actions>
+            <button mat-button color="accent" (click)="publishPost(post.id)">PUBLICAR</button>
+            <button mat-button color="warn" (click)="deletePost(post.id)">EXCLUIR</button>
+        </mat-card-actions>
+    </mat-card>
+</mat-list>
